// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-icon-button Default 1`] = `
<p>
  <button
    class="icon-btn"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon icon--menu"
      focusable="false"
      height="24px"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-menu"
      />
    </svg>
  </button>
</p>
`;

exports[`Storyshots ebay-icon-button Transparent 1`] = `
<p>
  <button
    class="icon-btn icon-btn--transparent"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon icon--menu"
      focusable="false"
      height="24px"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-menu"
      />
    </svg>
  </button>
</p>
`;

exports[`Storyshots ebay-icon-button With Badges 1`] = `
<p>
  <button
    class="icon-btn icon-btn--badged"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon icon--menu"
      focusable="false"
      height="24px"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-menu"
      />
    </svg>
    <span
      aria-hidden="true"
      aria-label="new feature available"
      class="badge"
    >
      1
    </span>
  </button>
</p>
`;
